[package]
name = "creepy_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Services"
]

[dependencies]
chrono = "0.4.33"
dirs = "5.0"
litcrypt = "0.3"
reqwest = { version = "0.11.24", features = ["blocking", "multipart"] }
